// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withFetcher connect() should throw if endpoint provider is missing 1`] = `"Invalid context. Did you forget to wrap the withFetcher(...) in a EndpointProvider?"`;

exports[`withFetcher should render nothing if there is an error and FailureComponent is null 1`] = `""`;

exports[`withFetcher should show custom FailureComponent if there is an error 1`] = `
<MockedFailureComponent
  error="Yepp... Error time! Wushhh!"
/>
`;

exports[`withFetcher should show custom spinner if there is no data yet 1`] = `<MockedLoadingComponent />`;

exports[`withFetcher should show default Failure if there is an error 1`] = `
<Translate(Failure)
  error="Yepp... Error time! Wushhh!"
/>
`;

exports[`withFetcher should show default spinner if there is no data yet 1`] = `<Loading />`;

exports[`withFetcher should show nothing if there is no data yet and LoadingComponent is null 1`] = `""`;

exports[`withFetcher should show wrapped component if there is data 1`] = `
<WrappedComponent
  someEndpoint={Object {}}
/>
`;

exports[`withFetcher should throw error if there is no endpoint provided 1`] = `"Cannot read property 'stateName' of undefined"`;
